--- a/index.html
+++ b/index.html
@@ -7,14 +7,34 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <style>
+        html {
+          scroll-behavior: smooth;
+        }
+        .row {
+          margin-left: 0;
+          margin-right: 0;
+        }
         .tm-social {
-            width: 60px;
-            height: 60px;
-            margin: 10px;
+            width: 50px;
+            height: 50px;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        .carousel-inner {
+          height: 530px;
+        }
+        .a nav-link {
+          text-decoration-style: wavy;
+        }
+        .nav-link:hover {
+          background-color: rgb(137, 133, 141);
+          border-radius: 15px;
+          padding-top: 1px;
         }
     </style>
     <title>CatLove s2</title>
   </head>
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,14 +43,15 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="navbar-brand" href="#"><img src="assets/img/gato-olhando-para-cima-silhueta-gato-by_vexels.svg" width="60" height="60" alt="" ></a>
-            <a class="nav-link active pt-4" href="#home">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link active pt-4" href="#poemas">Poemas</a>
-            <a class="nav-link pt-4" href="#sobre">Sobre</a>
-            <a class="nav-link pt-4" href="#videos">Vídeos</a>
-            <a class="nav-link pt-4" href="#contato">Contato</a>
+            <a class="nav-link mt-3 mb-3" href="#home">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link mt-3 mb-3" href="#poemas">Poemas</a>
+            <a class="nav-link mt-3 mb-3" href="#sobre">Sobre</a>
+            <a class="nav-link mt-3 mb-3" href="#videos">Vídeos</a>
+            <a class="nav-link mt-3 mb-3" href="#contato">Contato</a>
           </div>
         </div>
     </nav>
+
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -45,10 +66,10 @@
             <img src="assets/img/pexels-helena-lopes-1931371 olhos.jpg" class="img-fluid d-block w-100" alt="Foto Gato preto por pixabay">
           </div>
           <div class="carousel-item">
-            <img src="assets/img/pexels-александар-цветановић-1440403 gato amarelo.jpg" class="img-fluid d-block w-100" alt="Foto de Helena Lopes no Pexels">
+            <img src="assets/img/pexels-1440403 gato amarelo.jpg" class="img-fluid d-block w-100" alt="Foto de Helena Lopes no Pexels">
           </div>
           <div class="carousel-item">
-            <img src="assets/img/pexels-александар-цветановић-1440406 patinha.jpg" class="img-fluid d-block w-100" alt="Foto de Anel александар-цветановић no Pexels">
+            <img src="assets/img/pexels-1440406 patinha.jpg" class="img-fluid d-block w-100" alt="Foto de Anel александар-цветановић no Pexels">
           </div>
           <div class="carousel-item">
             <img src="assets/img/pexels-anel-rossouw-2558605 gato mesclado.jpg" class= "img-fluid d-block w-100" alt="Foto de Anel Rossouw no Pexels">
@@ -57,6 +78,7 @@
             <img src="assets/img/pexels-pixabay-236606 gato cinza.jpg" class= "img-fluid d-block w-100" alt="Foto Gato preto por pixabay">
           </div>
         </div>
+
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -66,10 +88,11 @@
           <span class="sr-only">Next</span>
         </a>
       </div>     
-      <hr>
-      <h3 class="card-title d-flex justify-content-center mt-3">POEMAS</h3>
 
-      <div class="container" id="poemas">
+      <hr>
+      <h3 id="poemas" class="card-title d-flex justify-content-center mt-3">POEMAS</h3>
+
+      <div class="container">
       <div class="row row-cols-1 row-cols-md-4 mb-5">
         <div class="col mb-1">
           <div class="card">
@@ -135,7 +158,6 @@
             </div>
           </div>
         </div>
-
         <div class="col mb-1">
           <div class="card">
             <img src="assets/img/pexels-tamba-budiarsana-979247 preguiça.jpg" class="card-img-top" alt="...">
@@ -156,8 +178,8 @@
       </div>
       <hr>
       
-    <h3 class="card-title d-flex justify-content-center">SOBRE</h3>
-    <div class="card bg-dark text-white" id="sobre">
+    <h3 id="sobre" class="card-title d-flex justify-content-center">SOBRE</h3>
+    <div class="card bg-dark text-white">
         <img src="assets/img/pexels-pixabay-37337 gato preto.jpg" class="card-img" alt="...">
         <div class="card-img-overlay ml-5 mt-5">
           <h6 class="card-title">O GATO PRETO</h6>
@@ -179,8 +201,8 @@
       </div>
       <hr>
 
-      <h3 class="card-title d-flex justify-content-center mt-3">VÍDEOS</h3>
-      <div class="row d-flex justify-content-between mt-3 mb-5" id="videos">
+      <h3 id="videos" class="card-title d-flex justify-content-center mt-3">VÍDEOS</h3>
+      <div class="row d-flex justify-content-between mt-3 mb-5">
           <div class="col-md-4">
             <iframe width="350" height="200" src="https://www.youtube-nocookie.com/embed/JxS5E-kZc2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
@@ -193,9 +215,9 @@
       </div>
       <hr>
 
-      <h3 class="card-title d-flex justify-content-center mt-3">CONTATO</h3>
+      <h3 id="contato" class="card-title d-flex justify-content-center mt-3">CONTATO</h3>
       <form class="needs-validation" novalidate>
-        <div class="form-row" id="contato">
+        <div class="form-row">
           <div class="col-md-6 mb-3">
             <label for="validationCustom01">Nome</label>
             <input type="text" class="form-control" id="validationCustom01"  required>
